--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,75 @@
 @keyframes showcolor{
-    from { 
-        color: white;
-        border-radius: 15px;
-    }
     to {
-        color: white;
-        background-color: rgb(255,194,32);
-        border-radius: 15px;
+        background-color: white;
     }
 }
-
-
-.nav-link{
-    color: black !important;
-}
-
 
 body{
     color: black;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-#logo {
-    height: 25%;
-    width: 30%
-}
-
 #header_area {
-    letter-spacing: 2px;
-    background-image: linear-gradient(white,transparent);
+    z-index: 1;
+    background-color: #004684;
     position: fixed;
     width: 100%;
     transition: top 0.3s;
 }
 
+#logo {
+    height: 20%;
+    width: 25%;
+}
+
+.nav-link {
+    font-size: 11px;
+    font-weight: 1000; /* ver se deixa */
+    color: white;
+    background: #00293f;
+    text-align: center;
+    position: relative;
+    vertical-align: middle;
+}
+
+.nav-item {
+    display: block;
+    width: 120px;
+    height: 32.5px;
+    margin: 5px;
+}
+
 .nav-link:hover{
-    /* background-color: rgb(255, 194, 32);
-    border-radius: 10px; */
+    color: #004684;
     animation-name: showcolor;
-    animation-duration: 1.5s;
+    animation-duration: 0.5s;
     animation-fill-mode: forwards;
+}
+
+.nav-link:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: orange;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    /* -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s; */
+  }
+
+.nav-link:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
 }
 
 .bginicial {
     min-height: 900px;
     display: flex;
-    background: linear-gradient(rgba(3,1,10,0.5),rgba(3,1,10,0.5)),url("../img/bground.jpeg");
     background-size: auto, auto;
     background-size: cover;
 }
