--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,14 @@ body{
 #logo {
     height: 20%;
     width: 25%;
+    flex-wrap: wrap;
 }
 
 .nav-link {
     font-size: 11px;
-    font-weight: 1000; /* ver se deixa */
+    font-weight: bold;
     color: white;
-    background: #00293f;
+    background: rgb(0,41,63);
     text-align: center;
     position: relative;
     vertical-align: middle;
@@ -57,7 +58,7 @@ body{
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
-    /* -webkit-transition: all 0.3s ease-in-out 0s;
+    /*-webkit-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s; */
   }
 
@@ -76,4 +77,8 @@ body{
 
 .content {
     margin-top: 200px;
+}
+
+.navbar-toggler-icon {
+    color: black;
 }
