--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,23 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.no-padding {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.minilogo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.mobile-nav {
+    width: 86%;
+    height: 4rem;
+}
+
 #header_area {
     z-index: 1;
     background-color: #004684;
