--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,13 @@
-@keyframes showcolor{
-    to {
-        background-color: white;
-    }
+header {
+  padding: 156px 0 100px;
 }
 
-body{
-    color: black;
-    font-family: 'Source Sans Pro', sans-serif;
+section {
+  padding: 150px 0;
 }
 
-.no-padding {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.minilogo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.mobile-nav {
-    width: 86%;
-    height: 4rem;
-}
-
-#header_area {
-    z-index: 1;
-    background-color: #004684;
-    position: fixed;
-    width: 100%;
-    transition: top 0.3s;
-}
-
-.nav-link {
-    font-size: 11px;
-    font-weight: bold;
-    color: white;
-    background: rgb(0,41,63);
-    text-align: center;
-    position: relative;
-    vertical-align: middle;
-}
-
-.nav-item {
-    display: block;
-    width: 120px;
-    height: 32.5px;
-    margin: 5px;
-}
-
-.nav-link:hover{
-    color: #004684;
-    animation-name: showcolor;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-}
-
-.nav-link:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: orange;
-    visibility: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    /*-webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s; */
-  }
-
-.nav-link:hover:before {
-    visibility: visible;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-}
-
-.bginicial {
-    min-height: 900px;
-    display: flex;
-    background-size: auto, auto;
-    background-size: cover;
-}
-
-.content {
-    margin-top: 200px;
-}
-
-.navbar-toggler-icon {
-    color: black;
+#about {
+  /* background-image: url("assets/img/bg.jpg"); */
+  background-image: url("https://images.pexels.com/photos/1366942/pexels-photo-1366942.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-size: cover;
 }
