pre-build-webpack

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,6 @@ section {
 }
 
 #about {
-  background-image: url("../assets/img/bg.jpg");
+  background-image: url("../img/bg.jpg");
   background-size: cover;
 }
-
-
