--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ section {
 }
 
 #about {
-  background-image: url("../assets/img/bg.jpg");
+  background-image: url("../img/bg.jpg");
   background-size: cover;
 }
 
