--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -85,4 +85,5 @@ body, html {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
+    background-color: aliceblue;
   }
