--- a/my-app/src/componentes/CardStyle.css
+++ b/my-app/src/componentes/CardStyle.css
@@ -1,10 +1,12 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 40%;
+    width: 400px;
+    margin: 50px;
+    border-radius: 2%;
   }
   .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.281);
   }
   
   .container {
@@ -13,4 +15,50 @@
 
   .imgContaner{
       width: 100%;
+      border-top-left-radius: 2%;
+      border-top-right-radius: 2%;
+  }
+
+  .row_btn{
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+  }
+
+  .button {
+    display: inline-block;
+    border-radius: 20%;
+    background-color: #2196F3;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    width: 60px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
   }
