--- a/my-app/src/componentes/CardStyle.css
+++ b/my-app/src/componentes/CardStyle.css
@@ -1,10 +1,22 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 400px;
-    margin: 50px;
+    width: 30%;
+    margin-top: 20px;
     border-radius: 2%;
   }
+
+@media only screen and (max-width: 800px) {
+    .card {
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      width: 100%;
+      margin-top: 20px;
+      border-radius: 2%;
+  }
+}
+
+
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.281);
   }
@@ -32,7 +44,7 @@
     color: #FFFFFF;
     text-align: center;
     font-size: 20px;
-    width: 60px;
+    width: 90%;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
