--- a/my-app/src/componentes/CardStyle.css
+++ b/my-app/src/componentes/CardStyle.css
@@ -1,8 +1,9 @@
 .card {
+    margin:15px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 30%;
-    margin-top: 20px;
+    margin-top: 50px;
     border-radius: 2%;
   }
 
