--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 header {
@@ -23,5 +24,3 @@ section {
 #about h2{
   font-size: 1.5em;
 }
-
-
