--- a/src/css/card.css
+++ b/src/css/card.css
@@ -2,24 +2,23 @@
 
 .card {
     position: relative;
-    width: 75%;
-    background: #EB5160;
-    color: #fff;
+    color: black;
     cursor: pointer;
     margin-bottom: 60px;
-    border-radius: 10px;
+    box-shadow: 0 5px 5px 2px #ccc;
+    height: 400px;
 }
 
-.card p {
+.card h2 {
     position: static;
     font-size: 1.2em;
+    letter-spacing: -1px;
 }
 
 .card>img {
-    margin: 10px 0;
     width: 100%;
+    height: 150px;
     position: relative;
-    border-radius: 10px;
 }
 
 .card-color-0 {
@@ -38,7 +37,6 @@
 
 .cover {
     position: fixed;
-    background: #EB5160;
     z-index: 100;
     transform-origin: 50% 50%;
 }
@@ -46,12 +44,14 @@
 /* The open page content */
 
 .open-content {
-    top:10vw;
+    top: 10vh;
+    height: 100vh;
     width: 100%;
     z-index: 110;
     position: absolute;
     opacity: 0;
     pointer-events: none;
+    background: white;
 }
 
 .open-content img {
@@ -66,7 +66,7 @@
     background: #fff;
     margin-top: -56%;
     padding: 60% 5% 5% 5%;
-    width: 80%;
+    width: 100%;
     margin-left: 5%;
     margin-bottom: 5%;
 }
