--- a/src/css/card.css
+++ b/src/css/card.css
@@ -15,7 +15,7 @@
     letter-spacing: -1px;
 }
 
-.card>img {
+.card img {
     width: 100%;
     height: 150px;
     position: relative;
@@ -44,7 +44,7 @@
 /* The open page content */
 
 .open-content {
-    top: 10vh;
+    top : 0;
     height: 100vh;
     width: 100%;
     z-index: 110;
@@ -52,6 +52,7 @@
     opacity: 0;
     pointer-events: none;
     background: white;
+    max-width: 1700px;
 }
 
 .open-content img {
@@ -60,6 +61,7 @@
     margin-left: 3%;
     margin-top: 20px;
     z-index: 5;
+    max-width: 1200px;
 }
 
 .open-content .text {
