--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,10 +2,10 @@
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
 }
-
+  
 body {
   background-color: #c8c8c8;
-  overflow-x: hidden;
+  max-width: 1700px;
 }
 
 header {
@@ -21,6 +21,7 @@ section {
   background-size: 100% 100%;
   background-attachment: fixed;
   height: 100vh;
+  max-height: 700px;
 }
 
 #about p{
