--- a/src/css/card.css
+++ b/src/css/card.css
@@ -53,7 +53,10 @@
     pointer-events: none;
     background: white;
     max-width: 1700px;
+    -ms-overflow-style: none;
 }
+
+.open-content::-webkit-scrollbar { width: 0 !important }
 
 .open-content img {
     position: relative;
@@ -73,7 +76,7 @@
     margin-bottom: 5%;
 }
 
-.open-content .text h1, .open-content .text p {
+.open-content .text h1, .open-content .text p{
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
@@ -162,6 +165,7 @@
     pointer-events: all;
     transition-delay: 1000ms;
 }
+
 
 /* 
   ** Media Queries
