--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,45 +1,66 @@
 * {
-  font-family: 'Montserrat', sans-serif;
-  box-sizing: border-box;
-  overflow-x: hidden;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
-  background-color: #c8c8c8;
-  max-width: 1700px;
-  -ms-overflow-style: none;
+    background-color: #c8c8c8;
+    max-width: 1700px;
+    -ms-overflow-style: none;
 }
 
-body::-webkit-scrollbar { width: 0 !important }
+body::-webkit-scrollbar {
+    width: 0 !important
+}
 
 section {
-  padding: 150px 0;
+    padding: 150px 0;
 }
 
 #about {
-  background-image: url("../img/giphy.gif");
-  background-size: 100% 100%;
-  background-attachment: fixed;
-  height: 100vh;
-  max-height: 700px;
-  overflow-y: hidden;
+    height: 100vh;
+    max-height: 700px;
+    overflow-y: hidden;
+    display: flex;
+    align-items: center;
 }
 
-#about p{
-  font-size: 1.5em;
-  max-width: 75vh;
+#about img {
+    /* background-image: url("../img/giphy.gif"); */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 10px;
+    z-index: -1;
+    filter: brightness(80%);
+    /* background-attachment: fixed; */
 }
 
-#about h2{
-  font-size: 4em;
-  overflow-y: hidden;
+#about p {
+    font-size: 1.5rem;
+    max-width: 75vh;
+}
+
+#about h2 {
+    font-size: 3.8rem;
+    overflow-y: hidden;
+}
+
+#cards .d-flex h2 {
+    font-size: 3rem;
 }
 
 footer .col-7 .fab {
     text-decoration: none;
     color: gray;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     margin-right: 30px;
+}
+
+.dropdown-menu {
+    z-index: 10;
 }
 
 footer .col-7 .fa-instagram:hover {
