--- a/frontend/src/css/masthead.css
+++ b/frontend/src/css/masthead.css
@@ -5,23 +5,12 @@
     z-index: 2;
 }
 
-video {
-    position: absolute;
-    top: 50%;
-    left: 70%;
-    width: auto;
-    height: auto;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    z-index: 0;
-}
-
 .masthead .content {
     position: absolute;
     width: 50%;
     right: 0;
     height: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
     -webkit-transform: skewX(-4deg);
     transform: skewX(-4deg);
     -webkit-transform-origin: bottom left;
