--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -39,51 +39,65 @@ section {
     align-items: center;
 }
 
-#about img {
-    position: absolute;
-    right: 0;
-    height: 100vh;
-    width: 100%;
-    transform: translateX(45%);
-}
-
-#about .content {
-    position: absolute;
-    background-color: white;
-    width: 50%;
-    left: 0;
-    z-index: 10;
-    background: white;
-    width: 50%;
-    -webkit-transform: skewX(-4deg);
-    transform: skewX(-4deg);
-    -webkit-transform-origin: top left;
-    transform-origin: top left;
-}
-
-#about .content h2 {
-    font-size: 2rem;
-    -webkit-transform: skewX(4deg);
-    transform: skewX(4deg);
-}
-
-#about .content p {
-    font-size: 1.5rem;
-    max-width: 400px;
-    -webkit-transform: skewX(4deg);
-    transform: skewX(4deg);
-}
-
 #home img {
-    /* background-image: url("../img/giphy.gif"); */
     position: absolute;
     width: 100%;
     height: 100%;
+    top: 0;
     left: 0;
-    top: 10px;
     z-index: -1;
     filter: brightness(80%);
-    /* background-attachment: fixed; */
+}
+
+#about {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "images" "txt";
+}
+
+#about .images {
+    background-color: #0077b5;
+    grid-area: images;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: "img1" "img2" "img3";
+    height: 100vh;
+    transform: skewX(-4deg);
+    transform-origin: top left;
+}
+
+#about .images img {
+    border: 5px solid yellow;
+    width: 40%;
+}
+
+#about .images .img1 {
+    margin-left: 20%;
+    grid-area: img1;
+    transform: skewX(4deg);
+}
+
+#about .images .img2 {
+    margin-left: 50%;
+    grid-area: img2;
+    transform: skewX(4deg);
+}
+
+#about .images .img3 {
+    margin-left: 30%;
+    grid-area: img3;
+    transform: skewX(4deg);
+}
+
+#about .txt h2 {
+    font-size: 2.3rem;
+}
+
+#about .txt p {
+    max-width: 500px;
+    font-size: 1.5rem;
 }
 
 #cards .header {
