--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -23,72 +23,68 @@ section {
     padding: 150px 0;
 }
 
+.scrolled {
+    background-color: #333 !important;
+    transition: background-color 200ms linear;
+}
+
 #home {
     height: 100vh;
-    max-height: 700px;
-    overflow-y: hidden;
     display: flex;
-    align-items: center;
+    overflow-y: hidden;
 }
 
-#about {
+@media screen and (min-width: 601px) {
+    #home h1 {
+        font-size: 60px;
+        text-align: end;
+    }
+    #home p {
+        float: right;
+        font-size: 32px;
+        max-width: 500px;
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #home h1 {
+        font-size: 56px;
+    }
+    #home p {
+        font-size: 24px;
+        text-align: justify
+    }
+}
+
+#home .container {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../img/bg.jpg);
+    background-position: center;
+    background-size: cover;
     height: 100vh;
-    max-height: 700px;
-    overflow-y: hidden;
-    display: flex;
-    align-items: center;
-}
-
-#home img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    filter: brightness(80%);
+    min-width: 100%;
 }
 
 #about {
+    min-height: 100vh;
+    overflow-y: hidden;
+    align-items: center;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "images" "txt";
 }
 
-#about .images {
-    background-color: #0077b5;
-    grid-area: images;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr;
-    grid-template-areas: "img1" "img2" "img3";
+#about .image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/about.png);
+    background-position: center;
+    background-size: cover;
     height: 100vh;
+    min-width: 100%;
+    -webkit-transform: skewX(-4deg);
     transform: skewX(-4deg);
+    -webkit-transform-origin: top left;
     transform-origin: top left;
-}
-
-#about .images img {
-    border: 5px solid yellow;
-    width: 40%;
-}
-
-#about .images .img1 {
-    margin-left: 20%;
-    grid-area: img1;
-    transform: skewX(4deg);
-}
-
-#about .images .img2 {
-    margin-left: 50%;
-    grid-area: img2;
-    transform: skewX(4deg);
-}
-
-#about .images .img3 {
-    margin-left: 30%;
-    grid-area: img3;
-    transform: skewX(4deg);
 }
 
 #about .txt h2 {
