--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -42,6 +42,7 @@ section {
     #home h1, #about h2 {
         font-size: 60px;
         text-align: end;
+        overflow: hidden;
     }
     #home p, #about p {
         font-size: 32px;
@@ -196,6 +197,11 @@ section {
     font-family: 'Roboto', sans-serif;
 }
 
+.portfolio-item img {
+    height: 200px;
+    width: max-content;
+}
+
 @media (min-width: 767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
@@ -213,12 +219,15 @@ section {
 }
 
 .portfolio-modal .modal-content h2 {
-    font-size: 3em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2em;
     margin-bottom: 15px;
 }
 
 .portfolio-modal .modal-content p {
+    font-family: 'Roboto', sans-serif;
     margin-bottom: 30px;
+    text-align: justify;
 }
 
 .portfolio-modal .modal-content p.item-intro {
